# djangodir

./: .gitignore  pyproject.toml  pytest.ini
base_templates/global/: base.html
core/: settings.py  urls.py
receitas/: models.py  tests.py  urls.py  views.py
receitas/migrations/: 0001_initial.py  0002_alter_recipe_author_alter_recipe_category.py
receitas/static/css/: styles.css
receitas/static/recipes/css/: styles.css
receitas/temp_templates/temp/: temp.html
receitas/templates/receitas/pages/: home.html  recipe-category.html  recipe-view.html
receitas/templates/receitas/partials/: base.html  footer.html  head.html  header.html  recipe.html
recipes/: admin.py  models.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_author_alter_recipe_category.py  0003_alter_recipe_slug.py
recipes/templates/recipes/pages/: home.html  recipe-category.html
recipes/templates/recipes/partials/: header.html  search.html
utils/recipes/: factory.py
