[tool.poetry]
name = "djangodir"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
Faker = "^13.3.4"
Pillow = "^9.1.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
